Add few stuff