@@ -30,6 +30,9 @@ A module is defined by a `module-info.java` file located in the root of the modu
 module com.example.myapp {
 }
 ```
+ **Note**: 
+ 1) Remember that "packages are exported" and "modules are required"
+ 2) A module jar is no different from a regular jar. It contains classes in the same structure and so, it can be used as a regular jar in a non-modular application. 
 
 ## Module Declarations
 ### `requires` Directive
@@ -51,6 +54,7 @@ Exports a package.
 ```java
 module com.example.myapp {
     exports com.example.myapp.api;
+    exports com.acme.db to com.acme.dto, com.acme.service;
 }
 ```
 
@@ -207,7 +211,18 @@ Convert existing JARs into modules by adding `module-info.java`.
 2. Compile the module.
 3. Create the modular JAR.
 ```sh
+# Compile a particular file in a module
+javac --module-source-path src -d out src/moduleA/a/A.java
+ 
+# Compile a module, module source path is to refer to a parent directory of module
+javac --module-source-path src -d out --module moduleA
+
+javac --module-source-path src --module-path thirdpartymodules -d out --module moduleA
+
+javac --module-source-path src --module-path thirdpartymodules/utils.jar -d out --module moduleA
+
 javac -d out src/com/example/myapp/*.java src/module-info.java
+
 jar --create --file mods/com.example.myapp.jar -C out .
 ```
 
@@ -232,6 +247,25 @@ To view jdk internals.
 ```sh
 jdeps -jdkinternals com.example.myapp.jar
 ```
+The jdeps tool is used to find out all dependencies of a class file or a jar file. 
+It inspects the given class file (or all class files inside a jar files) and finds out all the required modules and 
+packages that are referred to by this class or jar file.  
+You can add module jars and other jars in its search path using --module-path and --classpath options.
+```sh
+jdeps --module-path out out\moduleA\test\A.class
+```
+
+
+
+### JMOD
+Jmod tool has 5 options: create, extract, list, describe, hash.
+According to the documentation, JMOD enables aggregating files other than class files, metadata, and resources such as native codes and other things that cannot be stored in a JAR file.
+
+Therefore, JMOD files are designed to contain file types that cannot be contained by JAR files. 
+
+However, unlike JARs, which are executable, the JMOD files cannot be executed. 
+This means this files contained in JMOD can be used only at compile-time or link-time, but not at runtime.
+
 
 ### 6. Top-Down Strategy
 Modularize starting from the top-level application module.
@@ -252,3 +286,23 @@ Steps:
 1. Start with core utility modules and create `module-info.java` for each.
 2. Gradually modularize higher-level modules that depend on the utility modules.
 3. Continue until the top-level application module is modularized.
+
+### 8. Non modular to automatic module conversion rules
+
+When you use a non modular jar file as an automatic module, the name of the jar file is used to formulate the module name for that module. 
+
+You need to know the following two basic rules while deriving this name from the file name:  
+1. The dashes are converted to dots and the version information and the file extension present in the file name are ignored. Therefore, for example, the module name for commons-beanutils-1.9.jar will be commons.beanutils. 
+2. If the jar file's manifest contains the Automatic-Module-Name entry, then that value is used as the module name (the name of the jar file is ignored completely). Therefore, in the given problem statement, module name for commons-collections4-4.0.jar will be org.apache.commons.collections4.
+
+### Important points to remember
+1. Although not recommended, it is possible to customize what packages a module exports from the command line.
+2. If a module does not export a package, It can still be exported using --add-export command line option.
+3. If a module wants to read another module but only temporarily, it can request such access using command line options.
+4. Even packages that have not been exported in module-info can be made accessible using --add-exports command line option.
+5. A module jar is no different from a regular jar. It contains classes in the same structure and so, it can be used as a regular jar in a non-modular application.
+   The JVM uses various optimization techniques to improve application performance. JSR 376 indicates that these techniques are more effective when it is known in advance that required types are located only in specific modules.
+6. The module system ensures that code that is internal to a platform implementation is not accessible from outside the implementation.
+7. Besides compile time and run time, the module system adds the notion of "link time", which is an optional phase between the two in which a set of modules can be assembled and optimized into a custom run-time image. The benefit of this phase is that the size of the resulting application is reduced because only those classes that are actually used are included in the application artifacts.
+8. A non modular app can refer/access the classes of modular jar upon including that module in the -classpath or -cp.
+9. Remember that a module cannot access non-modular classes from the classpath. You must convert non-modular third party jar to an automatic module by putting that jar on module-path. (You must have already added an appropriate requires clause in your module-info while compilation of your module).
